syntax = "proto3";

package enreach.miner;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "enreach/miner/params.proto";
import "enreach/miner/miner.proto";

option go_package = "enreach/x/miner/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateMiner  (MsgCreateMiner ) returns (MsgCreateMinerResponse );
  rpc UpdateMiner  (MsgUpdateMiner ) returns (MsgUpdateMinerResponse );
  rpc DeleteMiner  (MsgDeleteMiner ) returns (MsgDeleteMinerResponse );
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                       "authority";
  option           (amino.name) = "enreach/x/miner/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateMiner {
  option (cosmos.msg.v1.signer) = "creator";
  string creator    = 1;
  string minerId    = 2;
  string evmAddress = 3;
  string regionCode = 4;
  string status     = 5;
}

message MsgCreateMinerResponse {
  uint64 id = 1;
}

message MsgUpdateMiner {
  option (cosmos.msg.v1.signer) = "creator";
  string creator    = 1;
  uint64 id         = 2;
  string minerId    = 3;
  string evmAddress = 4;
  string regionCode = 5;
  string status     = 6;
}

message MsgUpdateMinerResponse {}

message MsgDeleteMiner {
  option (cosmos.msg.v1.signer) = "creator";
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteMinerResponse {}

